<resources>
	<string name="app_name">Note App</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="reminders">Reminders</string>
	<string name="home">Home</string>
	<string name="search">Search</string>
	<string name="pin">Pin</string>
	<string name="title">Title</string>
	<string name="type_something">Type something ...</string>
	<string name="when_to_remind">When to remind?</string>
	<string name="date">Date</string>
	<string name="cancel">Cancel</string>
	<string name="save">Save</string>
	<string name="time">Time</string>
	<string name="update">Update</string>
	<string name="delete">Delete</string>
	<string name="filter">Filter</string>
	<string name="search_for_notes">Search for notes</string>
	<string name="nothing_found">Nothing found</string>
	<string name="color">Color</string>
	<string name="category">Category</string>
	<string name="apply_filter">Apply filter</string>
	<string name="reset_filter">Reset filter</string>
	<string name="pinned">Pinned</string>
	<string name="search_options">Search options</string>
</resources>