<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="12dp"
	android:background="?attr/colorSecondary">
	
	<!--  alert title	-->
	<TextView
		android:id="@+id/reminder_txt_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:text="@string/when_to_remind"
		android:textColor="?attr/colorOnSecondary"
		android:textSize="20sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<!--  alert date info layout	-->
	<LinearLayout
		android:id="@+id/picker_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:orientation="vertical"
		android:weightSum="2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/reminder_txt_title">
		
		<!--	date layout 	-->
		<LinearLayout
			android:id="@+id/date_picker_layout"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:orientation="horizontal"
			android:weightSum="3"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/reminder_txt_title">
			
			<TextView
				android:id="@+id/date_picker_txt"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="4dp"
				android:layout_weight="2"
				android:textAlignment="center"
				android:textSize="18sp"
				tools:text="9/5/2023 " />
			
			<androidx.appcompat.widget.AppCompatButton
				android:id="@+id/select_date_btn"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_weight="1"
				android:background="@drawable/bg_save_btn"
				android:drawableStart="@drawable/outline_date_range_24"
				android:drawableTint="?attr/colorOnPrimary"
				android:padding="12dp"
				android:text="@string/date"
				android:textAllCaps="false"
				android:textColor="?attr/colorOnSecondary" />
		
		</LinearLayout>
		
		<!--	time layout 	-->
		<LinearLayout
			android:id="@+id/time_picker_layout"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginTop="8dp"
			android:layout_weight="1"
			android:orientation="horizontal"
			android:weightSum="3"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/reminder_txt_title">
			
			<TextView
				android:id="@+id/time_picker_txt"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="4dp"
				android:layout_weight="2"
				android:textAlignment="center"
				android:textSize="18sp"
				tools:text="20:00 " />
			
			<androidx.appcompat.widget.AppCompatButton
				android:id="@+id/select_time_btn"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_weight="1"
				android:background="@drawable/bg_save_btn"
				android:drawableStart="@drawable/baseline_access_time_24"
				android:drawableTint="?attr/colorOnSecondary"
				android:padding="12dp"
				android:text="@string/time"
				android:textAllCaps="false"
				android:textColor="?attr/colorOnPrimary" />
		
		</LinearLayout>
	
	
	</LinearLayout>
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/picker_layout">
		
		<!--	save btn	-->
		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/save_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:background="@drawable/bg_save_btn"
			android:text="@string/save"
			android:textColor="?attr/colorOnSecondary"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintStart_toEndOf="@+id/cancel_btn"
			app:layout_constraintTop_toTopOf="parent" />
		
		<!--	cancel btn  	-->
		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/cancel_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:background="@drawable/bg_cancel_btn"
			android:text="@string/cancel"
			android:textColor="?attr/colorOnSecondary"
			app:layout_constraintEnd_toStartOf="@+id/save_btn"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
	
	
	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>