<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="8dp"
	tools:context=".ui.fragments.filter.FilterSearchFragment">
	
	<!--  dismiss filter fragment	-->
	<ImageView
		android:id="@+id/dismiss_filter_fragment"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:rotation="45"
		android:src="@drawable/baseline_add_24"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:tint="?attr/colorOnSecondary" />
	
	<!--  header	-->
	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/header_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		
		
		<ImageView
			android:id="@+id/dismiss_image"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:rotation="45"
			android:src="@drawable/baseline_add_24"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:tint="?attr/colorOnSecondary" />
		
		<TextView
			android:id="@+id/sorted_title_txt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/search_options"
			android:textColor="?attr/colorOnSecondary"
			android:textSize="18sp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/dismiss_image" />
		
		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginTop="4dp"
			android:background="@color/EerieBlack"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/sorted_title_txt" />
	
	
	</androidx.constraintlayout.widget.ConstraintLayout>
	
	<!--  pin search option	-->
	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/pin_search_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/header_layout">
		
		<TextView
			android:id="@+id/pin_txt_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pinned"
			android:textColor="@color/FrenchGray"
			android:textSize="16sp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<RadioGroup
			android:id="@+id/pin_radio_group"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:orientation="horizontal"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/pin_txt_title">
			
			<RadioButton
				android:id="@+id/yes_pin_radio_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="16dp"
				android:background="@drawable/bg_search_radio_btn_default"
				android:button="@null"
				android:checked="false"
				android:text="Yes"
				android:textAlignment="center"
				android:textColor="@color/SafetyOrange" />
			
			<RadioButton
				android:id="@+id/no_pin_radio_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/bg_search_radio_btn_default"
				android:button="@null"
				android:checked="false"
				android:text="No"
				android:textAlignment="center"
				android:textColor="@color/SafetyOrange" />
		
		
		</RadioGroup>
	
	
	</androidx.constraintlayout.widget.ConstraintLayout>
	
	<!--  category search option	-->
	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/category_search_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/pin_search_layout">
		
		
		<TextView
			android:id="@+id/category_txt_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/category"
			android:textColor="@color/FrenchGray"
			android:textSize="16sp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/category_rec"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@id/category_txt_title" />
	
	
	</androidx.constraintlayout.widget.ConstraintLayout>
	
	<!--  color search option	-->
	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/color_search_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/category_search_layout">
		
		
		<TextView
			android:id="@+id/color_txt_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/color"
			android:textColor="@color/FrenchGray"
			android:textSize="16sp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/color_rec"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@id/color_txt_title" />
	
	
	</androidx.constraintlayout.widget.ConstraintLayout>
	
	<!--  apply search btn	-->
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/apply_search_btn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:background="@drawable/bg_save_btn"
		android:text="@string/apply_filter"
		android:textAllCaps="false"
		android:textColor="@color/white"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/color_search_layout" />
	
	<!--  reset filter btn	-->
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/reset_filter_search_btn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:background="@drawable/bg_search_radio_btn_default"
		android:text="@string/reset_filter"
		android:textAllCaps="false"
		android:textColor="@color/SafetyOrange"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/apply_search_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>